# mallorn_romae

./: README.md  embeddings_vis_pretrained.ipynb  plots_vegaBestMall.ipynb  pyproject.toml  repro_best_combinedrunsvega.ipynb  run_vegaCLS_bestmall_comparison.py  transfo_data_parquet.ipynb
romae_mallorn/: __main__.py  config.py  dataset.py  env_config.py  env_contrastive.py  evaluate.py  finetune.py  plot.py  preprocess.py  pretrain.py  pretrain_contrastive.py  repro_bestMALLORN.ipynb  romae_contrastive.py  samplers.py  trainers.py  utils.py
romae_mallorn/.ipynb_checkpoints/: __main__-checkpoint.py  config-checkpoint.py  dataset-checkpoint.py  finetune-checkpoint.py  pretrain-checkpoint.py  utils-checkpoint.py
romae_mallorn/envs/vega/self_sup_only/: elasticc2_50pos_3000neg_tinyermidshallow6_1.env
romae_mallorn/envs/vega/selfsup_supcon_1-05/: elasticc2_100pos_3000neg_tinyermidshallow6_1.env  elasticc2_150pos_3000neg_tinyermidshallow6_1.env  elasticc2_200pos_3000neg_tinyermidshallow6_1.env  elasticc2_250pos_3000neg_tinyermidshallow6_1.env  elasticc2_300pos_3000neg_tinyermidshallow6_1.env  elasticc2_50pos_3000neg_tinyermidshallow6_1.env
romae_mallorn/envs/vega/selfsup_supcon_1-1/: elasticc2_100pos_3000neg_tinyermidshallow6_1.env  elasticc2_150pos_3000neg_tinyermidshallow6_1.env  elasticc2_200pos_3000neg_tinyermidshallow6_1.env  elasticc2_300pos_3000neg_tinyermidshallow6_1.env
romae_mallorn/envs/vega/supcon_only/: elasticc2_100pos_3000neg_tinyermidshallow6_1.env
(+12 files in other folders)
