[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Change this to the name of the directory containing the python package
include = ["romae_mallorn"]

[project]
# Change this to the name of the experiment
name = "romae_mallorn"
# Set this to a description of the experiment
description = "RoMAE code for MALLORN"

version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Uros Zivanovic", email = "uros.zivanovic@studenti.units.it"}, {name="Gabriella Contardo"}
]
maintainers = [
    {name="Gabriella Contardo"}
]
# Add in any dependancies your experiment has here
# Deps for preprocessing: ["pandas", "numpy", "wget", "astropy"]
dependencies = []

#[project.urls]
#Repository = ""
